; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/executor/extr_spi.c_SPI_prepare_params.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/executor/extr_spi.c_SPI_prepare_params.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, i8*, i32, i32*, i64, i32 }

@SPI_ERROR_ARGUMENT = common dso_local global i64 0, align 8
@SPI_result = common dso_local global i64 0, align 8
@_SPI_PLAN_MAGIC = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @SPI_prepare_params(i8* %0, i32 %1, i8* %2, i32 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca %struct.TYPE_5__, align 8
  %11 = alloca i32*, align 8
  store i8* %0, i8** %6, align 8
  store i32 %1, i32* %7, align 4
  store i8* %2, i8** %8, align 8
  store i32 %3, i32* %9, align 4
  %12 = load i8*, i8** %6, align 8
  %13 = icmp eq i8* %12, null
  br i1 %13, label %14, label %16

14:                                               ; preds = %4
  %15 = load i64, i64* @SPI_ERROR_ARGUMENT, align 8
  store i64 %15, i64* @SPI_result, align 8
  store i32* null, i32** %5, align 8
  br label %38

16:                                               ; preds = %4
  %17 = call i64 @_SPI_begin_call(i32 1)
  store i64 %17, i64* @SPI_result, align 8
  %18 = load i64, i64* @SPI_result, align 8
  %19 = icmp slt i64 %18, 0
  br i1 %19, label %20, label %21

20:                                               ; preds = %16
  store i32* null, i32** %5, align 8
  br label %38

21:                                               ; preds = %16
  %22 = call i32 @memset(%struct.TYPE_5__* %10, i32 0, i32 48)
  %23 = load i32, i32* @_SPI_PLAN_MAGIC, align 4
  %24 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %10, i32 0, i32 5
  store i32 %23, i32* %24, align 8
  %25 = load i32, i32* %9, align 4
  %26 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %10, i32 0, i32 0
  store i32 %25, i32* %26, align 8
  %27 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %10, i32 0, i32 4
  store i64 0, i64* %27, align 8
  %28 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %10, i32 0, i32 3
  store i32* null, i32** %28, align 8
  %29 = load i32, i32* %7, align 4
  %30 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %10, i32 0, i32 2
  store i32 %29, i32* %30, align 8
  %31 = load i8*, i8** %8, align 8
  %32 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %10, i32 0, i32 1
  store i8* %31, i8** %32, align 8
  %33 = load i8*, i8** %6, align 8
  %34 = call i32 @_SPI_prepare_plan(i8* %33, %struct.TYPE_5__* %10)
  %35 = call i32* @_SPI_make_plan_non_temp(%struct.TYPE_5__* %10)
  store i32* %35, i32** %11, align 8
  %36 = call i32 @_SPI_end_call(i32 1)
  %37 = load i32*, i32** %11, align 8
  store i32* %37, i32** %5, align 8
  br label %38

38:                                               ; preds = %21, %20, %14
  %39 = load i32*, i32** %5, align 8
  ret i32* %39
}

declare dso_local i64 @_SPI_begin_call(i32) #1

declare dso_local i32 @memset(%struct.TYPE_5__*, i32, i32) #1

declare dso_local i32 @_SPI_prepare_plan(i8*, %struct.TYPE_5__*) #1

declare dso_local i32* @_SPI_make_plan_non_temp(%struct.TYPE_5__*) #1

declare dso_local i32 @_SPI_end_call(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
